--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </div>
   </div>
   <a src="http://www.lonelyplanet.com/saudi-arabia/riyadh">A Lovely Planet</a>
+  <a src="http://www.lonelyplanet.com/saudi-arabia/riyadh">A Lovely Planet</a>
 </body>
 </html>
