--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h3>Sources</h3>
     <p>The city is divided into 15 municipal districts, managed by Riyadh Municipality headed by the mayor of Riyadh, and the Riyadh Development Authority, chaired by the governor of Riyadh Province, Khalid bin Bandar Al Saud. The current mayor of Riyadh is Abdullah bin Abdul Rahman Al Mogbel, appointed in 2012. Riyadh has the largest all female university in the world, the Princess Nora bint Abdulrahman University. It has been designated as a Beta World City.</p>
     </div>
-  <a src="http://www.lonelyplanet.com/saudi-arabia/riyadh">A Lovely Planet</a>
-  <a src="http://www.lonelyplanet.com/saudi-arabia/riyadh">Wikipedia</a>
+  <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">A Lovely Planet</a>
+  <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Wikipedia</a>
   </div>
 
 </body>
